--- a/nisum/ImageGallery/index.html
+++ b/nisum/ImageGallery/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="gallery">
-  <img src="img1.jpg" alt="Image 1">
-  <img src="img2.jpg" alt="Image 2">
-  <img src="img3.jpg" alt="Image 3">
-  <img src="img4.jpg" alt="Image 4">
+  <img src="https://picsum.photos/id/237/200/300" alt="Image 1" style="height: 100px; width: 100px;">
+  <img src="https://picsum.photos/id/238/200/300" alt="Image 2" style="height: 100px; width: 100px;">
+  <img src="https://picsum.photos/id/239/200/300" alt="Image 3" style="height: 100px; width: 100px;">
+  <img src="https://picsum.photos/id/240/200/300" alt="Image 4" style="height: 100px; width: 100px;">
 </div>
 </body>
 </html>
