--- a/nisum/layoutfix flexbox/index.html
+++ b/nisum/layoutfix flexbox/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+
 </head>
 <body>
-    <nav>
-  <ul class="nav-menu">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+    <div class="container">
+<div class="box">1</div>
+<div class="box">2</div>
+<div class="box">3</div>
+</div>
 </body>
 </html>
